--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -1441,6 +1441,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="5ab-iO-Wa4"/>
                     <connections>
+                        <outlet property="tblDiscover" destination="Zmw-en-MN6" id="79a-nd-1Ix"/>
                         <segue destination="GJ5-Ez-Ag6" kind="push" identifier="discoverEvent" id="Pah-ek-4S9"/>
                     </connections>
                 </tableViewController>
